# iot-ai-security-camera

./: .env.example  .gitignore  README.md  pyproject.toml
arduino/: __init__.py  avoidance_serial.ino  fake_sensor_data.py
artifacts/: arduino_serial.jsonl  mqtt_published.jsonl
docs/: demo_checklist.txt
src/: __init__.py  api_service.py  capture.py  config.py  db.py  detection.py  mqtt_service.py  security_system.py  serial_bridge.py  startup_banner.py  web_ui.py
src/artifacts/: mqtt_published.jsonl
src/camera/: __init__.py
src/camera/picam/: __init__.py  face_embed.py  helpers.py  imaging.py  imx500_person_gate.py  probe.py  session_lock.py
src/camera/picam/models/: README.md
src/camera/services/: __init__.py  proximity.py  register_user.py
src/core/: __init__.py  component_status.py  config.py  event_hub.py  startup_banner.py  status_publish.py  task_logging.py
src/data/: db.py
src/gateway/: __init__.py  config.py  serial_bridge.py  startup_banner.py  web_ui.py
src/gateway/persistence/: __init__.py  db.py
src/gateway/picam/: helpers.py
src/gateway/services/: proximity.py
src/gateway/templates/: dashboard.html
src/integrations/: __init__.py  serial_bridge.py
src/mqtt/: __init__.py  service.py
src/picam/: __init__.py  imaging.py
src/services/: proximity.py  register_user.py
src/templates/: dashboard.html  login.html
src/ui/: __init__.py  web_ui.py
src/ui/templates/: dashboard.html
src/web/: __init__.py  web_ui.py
src/web/static/css/: dashboard.css
src/web/static/js/: dashboard.js
src/web/templates/: dashboard.html  login.html
src/web/templates/partials/: dashboard_alerts_inner.html  dashboard_users_inner.html
test/: conftest.py  test_api_service.py  test_capture.py  test_config.py  test_db.py  test_detection.py  test_mqtt_service.py  test_picam_imaging.py  test_security_system.py  test_serial.py
